refactoring and modify

--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -5,5 +5,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CurrencyCode": {
+    "USD": "",
+    "AUD": "",
+    "DKK": "",
+    "EUR": "",
+    "GBP": "",
+    "SEK": "",
+    "CAD": "",
+    "KWD": "",
+    "NOK": "",
+    "SAR": "",
+    "JPY": "",
+    "BGN": "",
+    "RON": "",
+    "RUB": "",
+    "IRR": "",
+    "CNY": "",
+    "PKR": "",
+    "QAR": "",
+    "KRW": "",
+    "AZN": "",
+    "AED": ""
+  }
 }
