refactoring and url code

--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -6,27 +6,110 @@
     }
   },
   "AllowedHosts": "*",
-  "CurrencyCode": {
-    "USD": "",
-    "AUD": "",
-    "DKK": "",
-    "EUR": "",
-    "GBP": "",
-    "SEK": "",
-    "CAD": "",
-    "KWD": "",
-    "NOK": "",
-    "SAR": "",
-    "JPY": "",
-    "BGN": "",
-    "RON": "",
-    "RUB": "",
-    "IRR": "",
-    "CNY": "",
-    "PKR": "",
-    "QAR": "",
-    "KRW": "",
-    "AZN": "",
-    "AED": ""
+
+  "Exchange": {
+    "CurrencyCode": {
+      "USD": "USD/TRY",
+      "AUD": "AUD/TRY",
+      "DKK": "DKK/TRY",
+      "EUR": "EUR/TRY",
+      "GBP": "GBP/TRY",
+      "CHF": "CHF/TRY",
+      "SEK": "SEK/TRY",
+      "CAD": "CAD/TRY",
+      "KWD": "KWD/TRY",
+      "NOK": "NOK/TRY",
+      "SAR": "SAR/TRY",
+      "JPY": "JPY/TRY",
+      "BGN": "BGN/TRY",
+      "RON": "RON/TRY",
+      "RUB": "RUB/TRY",
+      "IRR": "IRR/TRY",
+      "CNY": "CNY/TRY",
+      "PKR": "PKR/TRY",
+      "QAR": "QAR/TRY",
+      "KRW": "KRW/TRY",
+      "AZN": "AZN/TRY",
+      "AED": "AED/TRY"
+    },
+    "Currency": {
+      "USD": "ABD DOLARI",
+      "AUD": "AVUSTRALYA DOLARI",
+      "DKK": "DANİMARKA KRONU",
+      "EUR": "EURO",
+      "GBP": "İNGİLİZ STERLİNİ",
+      "CHF": "İSVİÇRE FRANGI",
+      "SEK": "İSVEÇ KRONU",
+      "CAD": "KANADA DOLARI",
+      "KWD": "KUVEYT DİNARI",
+      "NOK": "NORVEÇ KRONU",
+      "SAR": "SUUDİ ARABİSTAN RİYALİ",
+      "JPY": "JAPON YENİ",
+      "BGN": "BULGAR LEVASI",
+      "RON": "RUMEN LEYİ",
+      "RUB": "RUS RUBLESİ",
+      "IRR": "İRAN RİYALİ",
+      "CNY": "ÇİN YUANI",
+      "PKR": "PAKİSTAN RUPİSİ",
+      "QAR": "KATAR RİYALİ",
+      "KRW": "GÜNEY KORE WONU",
+      "AZN": "AZERBAYCAN YENİ MANAT",
+      "AED": "BİRLEŞİK ARAP EMİRLİKLERİ DİRHEMİ"
+    },
+    "Unit": {
+      "USD": 1,
+      "AUD": 1,
+      "DKK": 1,
+      "EUR": 1,
+      "GBP": 1,
+      "CHF": 1,
+      "SEK": 1,
+      "CAD": 1,
+      "KWD": 1,
+      "NOK": 1,
+      "SAR": 1,
+      "JPY": 100,
+      "BGN": 1,
+      "RON": 1,
+      "RUB": 1,
+      "IRR": 100,
+      "CNY": 1,
+      "PKR": 1,
+      "QAR": 1,
+      "KRW": 1,
+      "AZN": 1,
+      "AED": 1
+    },
+
+    "Normal": 
+    {
+      "BGN": "TP.DK.BGN.A-TP.DK.BGN.S",
+      "RON": "TP.DK.RON.A-TP.DK.RON.S",
+      "RUB": "TP.DK.RUB.A-TP.DK.RUB.S",
+      "IRR": "TP.DK.IRR.A-TP.DK.IRR.S",
+      "CNY": "TP.DK.CNY.A-TP.DK.CNY.S",
+      "PKR": "TP.DK.PKR.A-TP.DK.PKR.S",
+      "QAR": "TP.DK.QAR.A-TP.DK.QAR.S",
+      "KRW": "TP.DK.KRW.A-TP.DK.KRW.S",
+      "AZN": "TP.DK.AZN.A-TP.DK.AZN.S",
+      "AED": "TP.DK.AED.A-TP.DK.AED.S"
+    },
+
+    "Effective": {
+      "USD": "TP.DK.USD.A-TP.DK.USD.S-TP.DK.USD.A.EF-TP.DK.USD.S.EF",
+      "AUD": "TP.DK.AUD.A-TP.DK.AUD.S-TP.DK.AUD.A.EF-TP.DK.AUD.S.EF",
+      "DKK": "TP.DK.DKK.A-TP.DK.DKK.S-TP.DK.DKK.A.EF-TP.DK.DKK.S.EF",
+      "EUR": "TP.DK.EUR.A-TP.DK.EUR.S-TP.DK.EUR.A.EF-TP.DK.EUR.S.EF",
+      "GBP": "TP.DK.GBP.A-TP.DK.GBP.S-TP.DK.GBP.A.EF-TP.DK.GBP.S.EF",
+      "CHF": "TP.DK.CHF.A-TP.DK.CHF.S-TP.DK.CHF.A.EF-TP.DK.CHF.S.EF",
+      "SEK": "TP.DK.SEK.A-TP.DK.SEK.S-TP.DK.SEK.A.EF-TP.DK.SEK.S.EF",
+      "CAD": "TP.DK.CAD.A-TP.DK.CAD.S-TP.DK.CAD.A.EF-TP.DK.CAD.S.EF",
+      "KWD": "TP.DK.KWD.A-TP.DK.KWD.S-TP.DK.KWD.A.EF-TP.DK.KWD.S.EF",
+      "NOK": "TP.DK.NOK.A-TP.DK.NOK.S-TP.DK.NOK.A.EF-TP.DK.NOK.S.EF",
+      "SAR": "TP.DK.SAR.A-TP.DK.SAR.S-TP.DK.SAR.A.EF-TP.DK.SAR.S.EF",
+      "JPY": "TP.DK.JPY.A-TP.DK.JPY.S-TP.DK.JPY.A.EF-TP.DK.JPY.S.EF"
+
+    }
   }
+  
 }
