--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -81,8 +81,7 @@
       "AED": 1
     },
 
-    "Normal": 
-    {
+    "Normal": {
       "BGN": "TP.DK.BGN.A-TP.DK.BGN.S",
       "RON": "TP.DK.RON.A-TP.DK.RON.S",
       "RUB": "TP.DK.RUB.A-TP.DK.RUB.S",
@@ -111,5 +110,12 @@
 
     }
   }
+
+  "CrossExchange": {
+    "CurrencyCode": {
+
+    }
+  }
+
   
 }
