--- a/Core/DataAPI.Application/DataAPI.Application.csproj
+++ b/Core/DataAPI.Application/DataAPI.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Abstraction\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
