--- a/Core/DataAPI.Application/DataAPI.Application.csproj
+++ b/Core/DataAPI.Application/DataAPI.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAPI.Domain\DataAPI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
