Database Context and Service Registration Added

--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
 
+  "ConnectionStrings": {
+    "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5433;Database=ExchangeRateDb;"
+  },
   "Exchange": {
     "CurrencyCode": {
       "USD": "USD/TRY",
@@ -109,7 +112,7 @@
       "JPY": "TP.DK.JPY.A-TP.DK.JPY.S-TP.DK.JPY.A.EF-TP.DK.JPY.S.EF"
 
     }
-  }
+  },
 
   "CrossExchange": {
     "CurrencyCode": {
@@ -117,5 +120,5 @@
     }
   }
 
-  
+
 }
