TCMB Exchange service and appsetings refactor

--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -10,7 +10,7 @@
   "ConnectionStrings": {
     "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5433;Database=ExchangeRateDb;"
   },
-  "Exchange": {
+  "ExchangeRate": {
     "CurrencyCode": {
       "USD": "USD/TRY",
       "AUD": "AUD/TRY",
@@ -84,7 +84,7 @@
       "AED": 1
     },
 
-    "Normal": {
+    "Exchange": {
       "BGN": "TP.DK.BGN.A-TP.DK.BGN.S",
       "RON": "TP.DK.RON.A-TP.DK.RON.S",
       "RUB": "TP.DK.RUB.A-TP.DK.RUB.S",
@@ -97,7 +97,7 @@
       "AED": "TP.DK.AED.A-TP.DK.AED.S"
     },
 
-    "Effective": {
+    "EffectiveExchange": {
       "USD": "TP.DK.USD.A-TP.DK.USD.S-TP.DK.USD.A.EF-TP.DK.USD.S.EF",
       "AUD": "TP.DK.AUD.A-TP.DK.AUD.S-TP.DK.AUD.A.EF-TP.DK.AUD.S.EF",
       "DKK": "TP.DK.DKK.A-TP.DK.DKK.S-TP.DK.DKK.A.EF-TP.DK.DKK.S.EF",
@@ -118,7 +118,7 @@
     "CurrencyCode": {
 
     }
-  }
-
+  },
+  "ApiKey": "3ffIKbWqrT"
 
 }
