CrossEchange code adding

--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -114,10 +114,106 @@
     }
   },
 
-  "CrossExchange": {
+  "CrossExchangeRate": {
     "CurrencyCode": {
+      "USD": "USD",
+      "AUD": "AUD",
+      "DKK": "DKK",
+      "CHF": "CHF",
+      "SEK": "SEK",
+      "JPY": "JPY",
+      "CAD": "CAD",
+      "NOK": "NOK",
+      "SAR": "SAR",
+      "EUR": "EUR",
+      "GBP": "GBP",
+      "KWD": "KWD",
+      "BGN": "BGN",
+      "RON": "RON",
+      "RUB": "RUB",
+      "IRR": "IRR",
+      "CNY": "CNY",
+      "PKR": "PKR",
+      "QAR": "QAR",
+      "KRW": "KRW",
+      "AZN": "AZN",
+      "AED": "AED"
 
+
+    },
+    "Currency": {
+      "USD": "ABD DOLARI",
+      "AUD": "AVUSTRALYA DOLARI",
+      "DKK": "DANİMARKA KRONU",
+      "CHF": "İSVİÇRE FRANGI",
+      "SEK": "İSVEÇ KRONU",
+      "JPY": "JAPON YENİ",
+      "CAD": "KANADA DOLARI",
+      "NOK": "NORVEÇ KRONU",
+      "SAR": "SUUDİ ARABİSTAN RİYALİ",
+      "EUR": "EURO",
+      "GBP": "İNGİLİZ STERLİNİ",
+      "KWD": "KUVEYT DİNARI",
+      "BGN": "BULGAR LEVASI",
+      "RON": "RUMEN LEYİ",
+      "RUB": "RUS RUBLESİ",
+      "IRR": "İRAN RİYALİ",
+      "CNY": "ÇİN YUANI",
+      "PKR": "PAKİSTAN RUPİSİ",
+      "QAR": "KATAR RİYALİ",
+      "KRW": "GÜNEY KORE WONU",
+      "AZN": "AZERBAYCAN YENİ MANATI",
+      "AED": "BİRLEŞİK ARAP EMİRLİKLERİ DİRHEMİ"
+    },
+    "CrossExchange": {
+      "USD": "TP.DK.USD.C",
+      "AUD": "TP.DK.AUD.C",
+      "DKK": "TP.DK.DKK.C",
+      "CHF": "TP.DK.CHF.C",
+      "SEK": "TP.DK.SEK.C",
+      "JPY": "TP.DK.JPY.C",
+      "CAD": "TP.DK.CAD.C",
+      "NOK": "TP.DK.NOK.C",
+      "SAR": "TP.DK.SAR.C",
+      "EUR": "TP.DK.EUR.C",
+      "GBP": "TP.DK.GBP.C",
+      "KWD": "TP.DK.KWD.C",
+      "BGN": "TP.DK.BGN.C",
+      "RON": "TP.DK.RON.C",
+      "RUB": "TP.DK.RUB.C",
+      "IRR": "TP.DK.IRR.C",
+      "CNY": "TP.DK.CNY.C",
+      "PKR": "TP.DK.PKR.C",
+      "QAR": "TP.DK.QAR.C",
+      "KRW": "TP.DK.KRW.C",
+      "AZN": "TP.DK.AZN.C",
+      "AED": "TP.DK.AED.C"
+    },
+    "Unit": {
+      "USD": 1,
+      "AUD": 1,
+      "DKK": 1,
+      "CHF": 1,
+      "SEK": 1,
+      "JPY": 1,
+      "CAD": 1,
+      "NOK": 1,
+      "SAR": 1,
+      "EUR": 1,
+      "GBP": 1,
+      "KWD": 1,
+      "BGN": 1,
+      "RON": 1,
+      "RUB": 1,
+      "IRR": 1,
+      "CNY": 1,
+      "PKR": 1,
+      "QAR": 1,
+      "KRW": 1,
+      "AZN": 1,
+      "AED": 1
     }
+
   },
   "ApiKey": "3ffIKbWqrT"
 
