Cross exchange refactor

--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -116,102 +116,122 @@
 
   "CrossExchangeRate": {
     "CurrencyCode": {
-      "USD": "USD",
-      "AUD": "AUD",
-      "DKK": "DKK",
-      "CHF": "CHF",
-      "SEK": "SEK",
-      "JPY": "JPY",
-      "CAD": "CAD",
-      "NOK": "NOK",
-      "SAR": "SAR",
-      "EUR": "EUR",
-      "GBP": "GBP",
-      "KWD": "KWD",
-      "BGN": "BGN",
-      "RON": "RON",
-      "RUB": "RUB",
-      "IRR": "IRR",
-      "CNY": "CNY",
-      "PKR": "PKR",
-      "QAR": "QAR",
-      "KRW": "KRW",
-      "AZN": "AZN",
-      "AED": "AED"
+      "USDToAUD": "USD/AUD",
+      "USDToDKK": "USD/DKK",
+      "USDToCHF": "USD/CHF",
+      "USDToSEK": "USD/SEK",
+      "USDToJPY": "USD/JPY",
+      "USDToCAD": "USD/CAD",
+      "USDToNOK": "USD/NOK",
+      "USDToSAR": "USD/SAR",
+      "EURToUSD": "EUR/USD",
+      "GBPToUSD": "GBP/USD",
+      "KWDToUSD": "KWD/USD",
+      "USDToBGN": "USD/BGN",
+      "USDToRON": "USD/RON",
+      "USDToRUB": "USD/RUB",
+      "USDToIRR": "USD/IRR",
+      "USDToCNY": "USD/CNY",
+      "USDToPKR": "USD/PKR",
+      "USDToQAR": "USD/QAR",
+      "USDToKRW": "USD/KRW",
+      "USDToAZN": "USD/AZN",
+      "USDToAED": "USD/AED"
 
 
     },
-    "Currency": {
-      "USD": "ABD DOLARI",
-      "AUD": "AVUSTRALYA DOLARI",
-      "DKK": "DANİMARKA KRONU",
-      "CHF": "İSVİÇRE FRANGI",
-      "SEK": "İSVEÇ KRONU",
-      "JPY": "JAPON YENİ",
-      "CAD": "KANADA DOLARI",
-      "NOK": "NORVEÇ KRONU",
-      "SAR": "SUUDİ ARABİSTAN RİYALİ",
-      "EUR": "EURO",
-      "GBP": "İNGİLİZ STERLİNİ",
-      "KWD": "KUVEYT DİNARI",
-      "BGN": "BULGAR LEVASI",
-      "RON": "RUMEN LEYİ",
-      "RUB": "RUS RUBLESİ",
-      "IRR": "İRAN RİYALİ",
-      "CNY": "ÇİN YUANI",
-      "PKR": "PAKİSTAN RUPİSİ",
-      "QAR": "KATAR RİYALİ",
-      "KRW": "GÜNEY KORE WONU",
-      "AZN": "AZERBAYCAN YENİ MANATI",
-      "AED": "BİRLEŞİK ARAP EMİRLİKLERİ DİRHEMİ"
+    "FromCurrency": {
+      "USDToAUD": "ABD DOLARI",
+      "USDToDKK": "ABD DOLARI",
+      "USDToCHF": "ABD DOLARI",
+      "USDToSEK": "ABD DOLARI",
+      "USDToJPY": "ABD DOLARI",
+      "USDToCAD": "ABD DOLARI",
+      "USDToNOK": "ABD DOLARI",
+      "USDToSAR": "ABD DOLARI",
+      "EURToUSD": "EURO",
+      "GBPToUSD": "İNGİLİZ STERLİNİ",
+      "KWDToUSD": "KUVEYT DİNARI",
+      "USDToBGN": "ABD DOLARI",
+      "USDToRON": "ABD DOLARI",
+      "USDToRUB": "ABD DOLARI",
+      "USDToIRR": "ABD DOLARI",
+      "USDToCNY": "ABD DOLARI",
+      "USDToPKR": "ABD DOLARI",
+      "USDToQAR": "ABD DOLARI",
+      "USDToKRW": "ABD DOLARI",
+      "USDToAZN": "ABD DOLARI",
+      "USDToAED": "ABD DOLARI"
+    },
+
+    "ToCurrency": {
+      "USDToAUD": "AVUSTRALYA DOLARI",
+      "USDToDKK": "DANİMARKA KRONU",
+      "USDToCHF": "İSVİÇRE FRANGI",
+      "USDToSEK": "İSVEÇ KRONU",
+      "USDToJPY": "JAPON YENİ",
+      "USDToCAD": "KANADA DOLARI",
+      "USDToNOK": "NORVEÇ KRONU",
+      "USDToSAR": "SUUDİ ARABİSTAN RİYALİ",
+      "EURToUSD": "ABD DOLARI",
+      "GBPToUSD": "ABD DOLARI",
+      "KWDToUSD": "ABD DOLARI",
+      "USDToBGN": "BULGAR LEVASI",
+      "USDToRON": "RUMEN LEYİ",
+      "USDToRUB": "RUS RUBLESİ",
+      "USDToIRR": "İRAN RİYALİ",
+      "USDToCNY": "ÇİN YUANI",
+      "USDToPKR": "PAKİSTAN RUPİSİ",
+      "USDToQAR": "KATAR RİYALİ",
+      "USDToKRW": "GÜNEY KORE WONU",
+      "USDToAZN": "AZERBAYCAN YENİ MANATI",
+      "USDToAED": "BİRLEŞİK ARAP EMİRLİKLERİ DİRHEMİ"
     },
     "CrossExchange": {
-      "USD": "TP.DK.USD.C",
-      "AUD": "TP.DK.AUD.C",
-      "DKK": "TP.DK.DKK.C",
-      "CHF": "TP.DK.CHF.C",
-      "SEK": "TP.DK.SEK.C",
-      "JPY": "TP.DK.JPY.C",
-      "CAD": "TP.DK.CAD.C",
-      "NOK": "TP.DK.NOK.C",
-      "SAR": "TP.DK.SAR.C",
-      "EUR": "TP.DK.EUR.C",
-      "GBP": "TP.DK.GBP.C",
-      "KWD": "TP.DK.KWD.C",
-      "BGN": "TP.DK.BGN.C",
-      "RON": "TP.DK.RON.C",
-      "RUB": "TP.DK.RUB.C",
-      "IRR": "TP.DK.IRR.C",
-      "CNY": "TP.DK.CNY.C",
-      "PKR": "TP.DK.PKR.C",
-      "QAR": "TP.DK.QAR.C",
-      "KRW": "TP.DK.KRW.C",
-      "AZN": "TP.DK.AZN.C",
-      "AED": "TP.DK.AED.C"
+      "USDToAUD": "TP.DK.USD.C-TP.DK.AUD.C",
+      "USDToDKK": "TP.DK.USD.C-TP.DK.DKK.C",
+      "USDToCHF": "TP.DK.USD.C-TP.DK.CHF.C",
+      "USDToSEK": "TP.DK.USD.C-TP.DK.SEK.C",
+      "USDToJPY": "TP.DK.USD.C-TP.DK.JPY.C",
+      "USDToCAD": "TP.DK.USD.C-TP.DK.CAD.C",
+      "USDToNOK": "TP.DK.USD.C-TP.DK.NOK.C",
+      "USDToSAR": "TP.DK.USD.C-TP.DK.SAR.C",
+      "EURToUSD": "TP.DK.USD.C-TP.DK.EUR.C",
+      "GBPToUSD": "TP.DK.USD.C-TP.DK.GBP.C",
+      "KWDToUSD": "TP.DK.USD.C-TP.DK.KWD.C",
+      "USDToBGN": "TP.DK.USD.C-TP.DK.BGN.C",
+      "USDToRON": "TP.DK.USD.C-TP.DK.RON.C",
+      "USDToRUB": "TP.DK.USD.C-TP.DK.RUB.C",
+      "USDToIRR": "TP.DK.USD.C-TP.DK.IRR.C",
+      "USDToCNY": "TP.DK.USD.C-TP.DK.CNY.C",
+      "USDToPKR": "TP.DK.USD.C-TP.DK.PKR.C",
+      "USDToQAR": "TP.DK.USD.C-TP.DK.QAR.C",
+      "USDToKRW": "TP.DK.USD.C-TP.DK.KRW.C",
+      "USDToAZN": "TP.DK.USD.C-TP.DK.AZN.C",
+      "USDToAED": "TP.DK.USD.C-TP.DK.AED.C"
     },
     "Unit": {
-      "USD": 1,
-      "AUD": 1,
-      "DKK": 1,
-      "CHF": 1,
-      "SEK": 1,
-      "JPY": 1,
-      "CAD": 1,
-      "NOK": 1,
-      "SAR": 1,
-      "EUR": 1,
-      "GBP": 1,
-      "KWD": 1,
-      "BGN": 1,
-      "RON": 1,
-      "RUB": 1,
-      "IRR": 1,
-      "CNY": 1,
-      "PKR": 1,
-      "QAR": 1,
-      "KRW": 1,
-      "AZN": 1,
-      "AED": 1
+      "USDToAUD": 1,
+      "USDToDKK": 1,
+      "USDToCHF": 1,
+      "USDToSEK": 1,
+      "USDToJPY": 1,
+      "USDToCAD": 1,
+      "USDToNOK": 1,
+      "USDToSAR": 1,
+      "EURToUSD": 1,
+      "GBPToUSD": 1,
+      "KWDToUSD": 1,
+      "USDToBGN": 1,
+      "USDToRON": 1,
+      "USDToRUB": 1,
+      "USDToIRR": 1,
+      "USDToCNY": 1,
+      "USDToPKR": 1,
+      "USDToQAR": 1,
+      "USDToKRW": 1,
+      "USDToAZN": 1,
+      "USDToAED": 1
     }
 
   },
