--- a/Infrastructure/DataAPI.Persistence/DataAPI.Persistence.csproj
+++ b/Infrastructure/DataAPI.Persistence/DataAPI.Persistence.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\DataAPI.Application\DataAPI.Application.csproj" />
     <ProjectReference Include="..\..\Core\DataAPI.Domain\DataAPI.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\ExchangeEffectiveRateWrite\" />
   </ItemGroup>
 
 </Project>
