--- a/Core/DataAPI.Application/DataAPI.Application.csproj
+++ b/Core/DataAPI.Application/DataAPI.Application.csproj
@@ -18,7 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Queries\" />
+    <Folder Include="Features\Queries\ExchangeCrossRate\GetByCurrenyCodeExchangeCrossRate\" />
+    <Folder Include="Features\Queries\ExchangeEffectiveRate\GetAllExchangeEffectiveRate\" />
+    <Folder Include="Features\Queries\ExchangeEffectiveRate\GetByCurrenyCodeExchangeEffectiveRate\" />
+    <Folder Include="Features\Queries\ExchangeRate\GetAllExchangeRate\" />
+    <Folder Include="Features\Queries\ExchangeRate\GetByCurrenyCodeExchangeRate\" />
   </ItemGroup>
 
 </Project>
