--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5433;Database=ExchangeRateDb;"
+    "PostgreSQL": "User ID=postgres;Password=123456;Host=localhost;Port=5433;Database=ExchangeRateDb;",
+    "Redis": "localhost:6379"
   },
   "ExchangeRate": {
     "CurrencyCode": {
