--- a/Core/DataAPI.Application/DataAPI.Application.csproj
+++ b/Core/DataAPI.Application/DataAPI.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\DataAPI.Domain\DataAPI.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Queries\ExchangeEffectiveRate\GetByCurrency\" />
+  </ItemGroup>
+
 </Project>
