--- a/Presentation/DataAPI.API/appsettings.json
+++ b/Presentation/DataAPI.API/appsettings.json
@@ -13,28 +13,28 @@
   },
   "ExchangeRate": {
     "CurrencyCode": {
-      "USD": "USD/TRY",
-      "AUD": "AUD/TRY",
-      "DKK": "DKK/TRY",
-      "EUR": "EUR/TRY",
-      "GBP": "GBP/TRY",
-      "CHF": "CHF/TRY",
-      "SEK": "SEK/TRY",
-      "CAD": "CAD/TRY",
-      "KWD": "KWD/TRY",
-      "NOK": "NOK/TRY",
-      "SAR": "SAR/TRY",
-      "JPY": "JPY/TRY",
-      "BGN": "BGN/TRY",
-      "RON": "RON/TRY",
-      "RUB": "RUB/TRY",
-      "IRR": "IRR/TRY",
-      "CNY": "CNY/TRY",
-      "PKR": "PKR/TRY",
-      "QAR": "QAR/TRY",
-      "KRW": "KRW/TRY",
-      "AZN": "AZN/TRY",
-      "AED": "AED/TRY"
+      "USD": "USD-TRY",
+      "AUD": "AUD-TRY",
+      "DKK": "DKK-TRY",
+      "EUR": "EUR-TRY",
+      "GBP": "GBP-TRY",
+      "CHF": "CHF-TRY",
+      "SEK": "SEK-TRY",
+      "CAD": "CAD-TRY",
+      "KWD": "KWD-TRY",
+      "NOK": "NOK-TRY",
+      "SAR": "SAR-TRY",
+      "JPY": "JPY-TRY",
+      "BGN": "BGN-TRY",
+      "RON": "RON-TRY",
+      "RUB": "RUB-TRY",
+      "IRR": "IRR-TRY",
+      "CNY": "CNY-TRY",
+      "PKR": "PKR-TRY",
+      "QAR": "QAR-TRY",
+      "KRW": "KRW-TRY",
+      "AZN": "AZN-TRY",
+      "AED": "AED-TRY"
     },
     "Currency": {
       "USD": "ABD DOLARI",
@@ -95,7 +95,19 @@
       "QAR": "TP.DK.QAR.A-TP.DK.QAR.S",
       "KRW": "TP.DK.KRW.A-TP.DK.KRW.S",
       "AZN": "TP.DK.AZN.A-TP.DK.AZN.S",
-      "AED": "TP.DK.AED.A-TP.DK.AED.S"
+      "AED": "TP.DK.AED.A-TP.DK.AED.S",
+      "USD": "TP.DK.USD.A-TP.DK.USD.S",
+      "AUD": "TP.DK.AUD.A-TP.DK.AUD.S",
+      "DKK": "TP.DK.DKK.A-TP.DK.DKK.S",
+      "EUR": "TP.DK.EUR.A-TP.DK.EUR.S",
+      "GBP": "TP.DK.GBP.A-TP.DK.GBP.S",
+      "CHF": "TP.DK.CHF.A-TP.DK.CHF.S",
+      "SEK": "TP.DK.SEK.A-TP.DK.SEK.S",
+      "CAD": "TP.DK.CAD.A-TP.DK.CAD.S",
+      "KWD": "TP.DK.KWD.A-TP.DK.KWD.S",
+      "NOK": "TP.DK.NOK.A-TP.DK.NOK.S",
+      "SAR": "TP.DK.SAR.A-TP.DK.SAR.S",
+      "JPY": "TP.DK.JPY.A-TP.DK.JPY.S"
     },
 
     "EffectiveExchange": {
@@ -117,27 +129,27 @@
 
   "CrossExchangeRate": {
     "CurrencyCode": {
-      "USDToAUD": "USD/AUD",
-      "USDToDKK": "USD/DKK",
-      "USDToCHF": "USD/CHF",
-      "USDToSEK": "USD/SEK",
-      "USDToJPY": "USD/JPY",
-      "USDToCAD": "USD/CAD",
-      "USDToNOK": "USD/NOK",
-      "USDToSAR": "USD/SAR",
-      "EURToUSD": "EUR/USD",
-      "GBPToUSD": "GBP/USD",
-      "KWDToUSD": "KWD/USD",
-      "USDToBGN": "USD/BGN",
-      "USDToRON": "USD/RON",
-      "USDToRUB": "USD/RUB",
-      "USDToIRR": "USD/IRR",
-      "USDToCNY": "USD/CNY",
-      "USDToPKR": "USD/PKR",
-      "USDToQAR": "USD/QAR",
-      "USDToKRW": "USD/KRW",
-      "USDToAZN": "USD/AZN",
-      "USDToAED": "USD/AED"
+      "USDToAUD": "USD-AUD",
+      "USDToDKK": "USD-DKK",
+      "USDToCHF": "USD-CHF",
+      "USDToSEK": "USD-SEK",
+      "USDToJPY": "USD-JPY",
+      "USDToCAD": "USD-CAD",
+      "USDToNOK": "USD-NOK",
+      "USDToSAR": "USD-SAR",
+      "EURToUSD": "EUR-USD",
+      "GBPToUSD": "GBP-USD",
+      "KWDToUSD": "KWD-USD",
+      "USDToBGN": "USD-BGN",
+      "USDToRON": "USD-RON",
+      "USDToRUB": "USD-RUB",
+      "USDToIRR": "USD-IRR",
+      "USDToCNY": "USD-CNY",
+      "USDToPKR": "USD-PKR",
+      "USDToQAR": "USD-QAR",
+      "USDToKRW": "USD-KRW",
+      "USDToAZN": "USD-AZN",
+      "USDToAED": "USD-AED"
 
 
     },
